--- a/lambda/requirements.txt
+++ b/lambda/requirements.txt
@@ -1,24 +1,24 @@
-boto3==1.26.58 ; python_version >= "3.9" and python_version < "3.10" \
-    --hash=sha256:89811efea5ac4eeba0a816a41e651fa06110926a7fdb7f20e5eb84e519902ee2 \
-    --hash=sha256:d130281211014510b2cf33412a177909d8d18286e1ef67362850dea07067b7df
-botocore==1.29.58 ; python_version >= "3.9" and python_version < "3.10" \
-    --hash=sha256:413ea124f2486f142dd59ed7fb68ec86f53bc7c932db9613cadd510d76c6b245 \
-    --hash=sha256:e4e0d05c1493bedc88bb78b24a08d79a60f3b9cea21a64edea3e8411823ecf82
-jmespath==1.0.1 ; python_version >= "3.9" and python_version < "3.10" \
+boto3==1.38.1 ; python_version >= "3.13" and python_version < "3.14" \
+    --hash=sha256:988e7fae7fd4d59798f84604d73a3a019c07b048f746c7c40258c0e656473887 \
+    --hash=sha256:f192a4a34885a9e3e970b5ce5e6bec947be0f3fe6c4693b2a737c14407b12a5a
+botocore==1.38.2 ; python_version >= "3.13" and python_version < "3.14" \
+    --hash=sha256:5d9cffedb1c759a058b43793d16647ed44ec87072f98a1bd6cd673ac0ae6b81d \
+    --hash=sha256:b688a9bd17211a1eaae3a6c965ba9f3973e5435efaaa4fa201f499d3467830e1
+jmespath==1.0.1 ; python_version >= "3.13" and python_version < "3.14" \
     --hash=sha256:02e2e4cc71b5bcab88332eebf907519190dd9e6e82107fa7f83b1003a6252980 \
     --hash=sha256:90261b206d6defd58fdd5e85f478bf633a2901798906be2ad389150c5c60edbe
-python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "3.10" \
-    --hash=sha256:0123cacc1627ae19ddf3c27a5de5bd67ee4586fbdd6440d9748f8abb483d3e86 \
-    --hash=sha256:961d03dc3453ebbc59dbdea9e4e11c5651520a876d0f4db161e8674aae935da9
-pytz==2022.7.1 ; python_version >= "3.9" and python_version < "3.10" \
-    --hash=sha256:01a0681c4b9684a28304615eba55d1ab31ae00bf68ec157ec3708a8182dbbcd0 \
-    --hash=sha256:78f4f37d8198e0627c5f1143240bb0206b8691d8d7ac6d78fee88b78733f8c4a
-s3transfer==0.6.0 ; python_version >= "3.9" and python_version < "3.10" \
-    --hash=sha256:06176b74f3a15f61f1b4f25a1fc29a4429040b7647133a463da8fa5bd28d5ecd \
-    --hash=sha256:2ed07d3866f523cc561bf4a00fc5535827981b117dd7876f036b0c1aca42c947
-six==1.16.0 ; python_version >= "3.9" and python_version < "3.10" \
-    --hash=sha256:1e61c37477a1626458e36f7b1d82aa5c9b094fa4802892072e49de9c60c4c926 \
-    --hash=sha256:8abb2f1d86890a2dfb989f9a77cfcfd3e47c2a354b01111771326f8aa26e0254
-urllib3==1.26.14 ; python_version >= "3.9" and python_version < "3.10" \
-    --hash=sha256:076907bf8fd355cde77728471316625a4d2f7e713c125f51953bb5b3eecf4f72 \
-    --hash=sha256:75edcdc2f7d85b137124a6c3c9fc3933cdeaa12ecb9a6a959f22797a0feca7e1
+python-dateutil==2.9.0.post0 ; python_version >= "3.13" and python_version < "3.14" \
+    --hash=sha256:37dd54208da7e1cd875388217d5e00ebd4179249f90fb72437e91a35459a0ad3 \
+    --hash=sha256:a8b2bc7bffae282281c8140a97d3aa9c14da0b136dfe83f850eea9a5f7470427
+pytz==2025.2 ; python_version >= "3.13" and python_version < "3.14" \
+    --hash=sha256:360b9e3dbb49a209c21ad61809c7fb453643e048b38924c765813546746e81c3 \
+    --hash=sha256:5ddf76296dd8c44c26eb8f4b6f35488f3ccbf6fbbd7adee0b7262d43f0ec2f00
+s3transfer==0.12.0 ; python_version >= "3.13" and python_version < "3.14" \
+    --hash=sha256:35b314d7d82865756edab59f7baebc6b477189e6ab4c53050e28c1de4d9cce18 \
+    --hash=sha256:8ac58bc1989a3fdb7c7f3ee0918a66b160d038a147c7b5db1500930a607e9a1c
+six==1.17.0 ; python_version >= "3.13" and python_version < "3.14" \
+    --hash=sha256:4721f391ed90541fddacab5acf947aa0d3dc7d27b2e1e8eda2be8970586c3274 \
+    --hash=sha256:ff70335d468e7eb6ec65b95b99d3a2836546063f63acc5171de367e834932a81
+urllib3==2.4.0 ; python_version >= "3.13" and python_version < "3.14" \
+    --hash=sha256:414bc6535b787febd7567804cc015fee39daab8ad86268f1310a9250697de466 \
+    --hash=sha256:4e16665048960a0900c702d4a66415956a584919c03361cac9f1df5c5dd7e813
