--- a/lambda/pyproject.toml
+++ b/lambda/pyproject.toml
@@ -13,6 +13,8 @@ pytz = "2025.2"
 [tool.poetry.group.dev.dependencies]
 black = "22.12.0"
 isort = "5.13.2"
+pytest = "^8.0.0"
+pytest-cov = "^5.0.0"
 
 [tool.black]
 line-length = 119
@@ -20,6 +22,16 @@ line-length = 119
 [tool.isort]
 profile = "black"
 line_length = 119
+
+[tool.pytest.ini_options]
+addopts = [
+    "--strict-markers",
+    "--strict-config",
+    "--cov=src",
+    "--cov-report=term-missing",
+    "--cov-report=html",
+    "--cov-fail-under=80",
+]
 
 [build-system]
 requires = ["poetry-core"]
