--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,12 +27,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup terraform
-        uses: ./.github/actions/setup-terraform
+      - name: Setup poetry
+        uses: ./.github/actions/setup-poetry
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - name: Run terraform init
-        run: terraform init
-      - name: Run terraform apply
-        run: terraform apply -auto-approve
+      - name: Run test
+        run: poetry run pytest
