--- a/.github/actions/setup-tools/action.yml
+++ b/.github/actions/setup-tools/action.yml
@@ -8,24 +8,38 @@ inputs:
   aws-secret-access-key:
     description: AWS secret access key
     required: true
-
+  poetry-working-directory:
+    description: Working directory where to look for the poetry.lock file
+    required: false
+    default: "."
 
 runs:
   using: "composite"
   steps:
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ inputs.aws-access-key-id }}
+        aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
+        aws-region: ap-northeast-1
+
     - name: Get tool versions
       run: |
         set -x
         echo "PYTHON_VERSION=$(cat .tool-versions | perl -ne 'print $1 if /^python (.*?)$/')" >> $GITHUB_ENV
         echo "POETRY_VERSION=$(cat .tool-versions | perl -ne 'print $1 if /^poetry (.*?)$/')" >> $GITHUB_ENV
+        echo "TERRAFORM_VERSION=$(cat .tool-versions | perl -ne 'print $1 if /^terraform (.*)$/')" >> $GITHUB_ENV
       shell: bash
+
     - name: Setup Python
       uses: actions/setup-python@v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
+
     - name: Install poetry
       run: pip install poetry==${{ env.POETRY_VERSION }}
       shell: bash
+
     - name: Cache poetry cache
       uses: actions/cache@v4
       if: ${{ inputs.working-directory != '.' }}
@@ -33,3 +47,9 @@ runs:
         path: ~/.cache/pypoetry
         key: ${{ runner.os }}-poetry-${{ hashFiles(format('{0}/**/poetry.lock', inputs.working-directory)) }}
         restore-keys: ${{ runner.os }}-poetry-
+
+    - name: Setup terraform
+      uses: hashicorp/setup-terraform@v2
+      with:
+        terraform_version: ${{ env.TERRAFORM_VERSION }}
+
