--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,21 +18,35 @@ jobs:
         env:
           JSON: ${{ toJSON(github) }}
   
-  terraform-apply:
+  test:
     runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash
-        working-directory: ./.github/workflows
+        working-directory: lambda
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup terraform
-        uses: ./.github/actions/setup-terraform
+
+      - name: Setup tools
+        uses: ./.github/actions/setup-tools
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - name: Run terraform init
+          poetry-working-directory: lambda
+
+      - name: Terraform init
         run: terraform init
-      - name: Run terraform apply
+        working-directory: .github/workflows
+
+      - name: Terraform apply
         run: terraform apply -auto-approve
+        working-directory: .github/workflows
+
+      - name: Run poetry install
+        run: poetry install
+        working-directory: lambda
+
+      - name: Run test
+        run: poetry run pytest
+        working-directory: lambda
